Find pair with given sum in an array

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ cmake-build-debug/*
 CMakeLists.txt
 .idea/*
 /main.cpp
-main.cpp
-template.cpp
-input.txt
-output.txt
+/template.cpp
+/input.txt
+/output.txt
+/cp.cpp
